--- a/server/package.json
+++ b/server/package.json
@@ -6,11 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bluebird": "^3.5.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
-    "http-errors": "~1.6.2",
+    "http-errors": "^1.6.3",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.3.14",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "nconf": "^0.10.0",
+    "pug": "2.0.0-beta11",
+    "require-dir": "^1.2.0"
   }
 }
