--- a/client/frontapp/package.json
+++ b/client/frontapp/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
+    "@angular/flex-layout": "^7.0.0-beta.21",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
     "@angular/material": "^7.1.1",
@@ -24,6 +25,7 @@
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "node-sass": "^4.11.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
