--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.0",
     "nconf": "^0.10.0",
     "pug": "2.0.0-beta11",
-    "require-dir": "^1.2.0"
+    "require-dir": "^1.2.0",
+    "url-parse": "^1.4.4"
   }
 }
