code for frontend
code for frontend

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,38 @@ client/frontapp/package-lock.json
 client/frontapp/src/app/auth/login/login.component.ts
 client/frontapp/src/app/auth/login/login.component.ts
 client/frontapp/package-lock.json
+mytest/.editorconfig
+mytest/angular.json
+mytest/e2e/protractor.conf.js
+mytest/e2e/src/app.e2e-spec.ts
+mytest/e2e/src/app.po.ts
+mytest/e2e/tsconfig.e2e.json
+mytest/package-lock.json
+mytest/package.json
+mytest/README.md
+mytest/src/app/app-routing.module.ts
+mytest/src/app/app.component.css
+mytest/src/app/app.component.html
+mytest/src/app/app.component.spec.ts
+mytest/src/app/app.component.ts
+mytest/src/app/app.module.ts
+mytest/src/app/dishlist/dishlist.component.css
+mytest/src/app/dishlist/dishlist.component.html
+mytest/src/app/dishlist/dishlist.component.spec.ts
+mytest/src/app/dishlist/dishlist.component.ts
+mytest/src/assets/.gitkeep
+mytest/src/browserslist
+mytest/src/environments/environment.prod.ts
+mytest/src/environments/environment.ts
+mytest/src/favicon.ico
+mytest/src/index.html
+mytest/src/karma.conf.js
+mytest/src/main.ts
+mytest/src/polyfills.ts
+mytest/src/styles.css
+mytest/src/test.ts
+mytest/src/tsconfig.app.json
+mytest/src/tsconfig.spec.json
+mytest/src/tslint.json
+mytest/tsconfig.json
+mytest/tslint.json
