--- a/client/frontapp/package.json
+++ b/client/frontapp/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ngrx/store": "^6.1.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "node-sass": "^4.11.0",
+    "redux": "^4.0.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
