--- a/client/frontapp/package.json
+++ b/client/frontapp/package.json
@@ -29,6 +29,7 @@
     "node-sass": "^4.11.0",
     "redux": "^4.0.1",
     "rxjs": "~6.3.3",
+    "smooth-scrollbar": "^8.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
