updated code for Dish function
updated code for Dish function

--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,27 @@ mytest/tsconfig.json
 mytest/tslint.json
 mytest/src/app/s/s.component.ts
 mytest/src/app/s/s.component.spec.ts
+mytest/src/app/dialogs/add/add.dialog.html
+mytest/src/app/dialogs/delete/delete.dialog.component.ts
+mytest/src/app/dialogs/delete/delete.dialog.css
+mytest/src/app/dialogs/delete/delete.dialog.html
+mytest/src/app/dialogs/edit/edit.dialog.component.ts
+mytest/src/app/dialogs/edit/edit.dialog.css
+mytest/src/app/dialogs/edit/edit.dialog.html
+mytest/src/app/models/issue.ts
+mytest/src/app/services/data.service.ts
+mytest/src/appbk/app-routing.module.ts
+mytest/src/appbk/app.component.css
+mytest/src/appbk/app.component.html
+mytest/src/appbk/app.component.spec.ts
+mytest/src/appbk/app.component.ts
+mytest/src/appbk/app.module.ts
+mytest/src/appbk/dishlist/dishlist.component.css
+mytest/src/appbk/dishlist/dishlist.component.html
+mytest/src/appbk/dishlist/dishlist.component.spec.ts
+mytest/src/appbk/dishlist/dishlist.component.ts
+mytest/src/appbk/s/s.component.spec.ts
+mytest/src/appbk/s/s.component.ts
+mytest/src/styles.scss
+mytest/src/app/dialogs/add/add.dialog.component.ts
+mytest/src/app/dialogs/add/add.dialog.css
